<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintBottom_toTopOf="@id/btn_filter_cold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_filter_cold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_filter_pantry"
        app:layout_constraintBottom_toTopOf="@id/btn_filter_household"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        android:text="@string/filter_cold"/>

    <Button
        android:id="@+id/btn_filter_pantry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="45dp"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintStart_toEndOf="@id/btn_filter_cold"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/filter_pantry"/>

    <Button
        android:id="@+id/btn_filter_household"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="45dp"
        app:layout_constraintTop_toBottomOf="@id/btn_filter_cold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/filter_household"/>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_inventory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />
</androidx.constraintlayout.widget.ConstraintLayout>