<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/main_activity">
        <TextView
            android:id="@+id/textview_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="20sp"
            android:text="@string/instructions"
            app:layout_constraintBottom_toTopOf="@id/btn_filter_cold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_filter_cold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_filter_pantry"
            app:layout_constraintBottom_toTopOf="@id/btn_filter_household"
            app:layout_constraintTop_toBottomOf="@id/textview_first"
            android:text="@string/filter_cold"/>

        <Button
            android:id="@+id/btn_filter_pantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@id/btn_filter_cold"
            app:layout_constraintBottom_toTopOf="@id/btn_filter_household"
            android:text="@string/filter_pantry"/>

        <Button
            android:id="@+id/btn_filter_household"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@id/btn_filter_pantry"
            app:layout_constraintBottom_toTopOf="@+id/btn_view_inventory"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/filter_household"/>

        <Button
            android:id="@+id/btn_view_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/to_inventory"
            app:layout_constraintTop_toBottomOf="@id/btn_filter_household"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        app:menu="@menu/bottom_nav_menu"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="60dp"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>